Jan 21, 2026
  ensembl: updated to build 115
  ensembl: added rat assemblies UTH_Rnor_SHRSP_BbbUtx_1.0, UTH_Rnor_SHR_Utx and UTH_Rnor_WKY_Bbb_1.0

Jan 13, 2026
  ontologies: set up 'disease' and 'chebi' loggers

Jan 07, 2026
  rat: added assemblies: Dahl_SR_JrHsd, Lyon_Normot, Lyon_Hypertensive, F344_StmMcwi

Dec 04, 2025
  gff3 writer: no longer exporting genes without a strand

Oct 06, 2025
  fixed scripts

Aug 15, 2025
  added generation of biological regions track

May 16, 2025
  ensembl data: upgraded from build 111 to 114; support for GRCr8
  genes: generation of tracks for genes and biological regions
  removed unused class PhenoLoader
  
Jan 28, 2025
  agr genes: fixed generation of stable ids for transcripts

Jan 24, 2025
  markers, qtls: added generation of gff3 files for GRCr8 assembly

Jan 16, 2025
  agr gff3: suppressed generation of ID attributes for exons, utrs and CDSs

Dec 17, 2024
  gtf generator: transcript_ids are now fully versioned

Dec 09, 2024
  genes: fix to properly handle null strands and null gene names

Dec 06, 2024
  genes: fix to avoid NullPointerException

Nov 01, 2024
  dog: added generation of files for assemblies Dog10K_Boxer_Tasha & UU_Cfam_GSD_1.0

Sep 13, 2024
  agr: implemented stable ids
  jbrowse2 gff files: added UTH_SHR, UTH_SHRSP and UTH_WKY to list of processed rat assemblies

Jul 11, 2024
  agr: added export of chromosome regions in header

Apr 16 2024
  jbrowse2: added black rat assembly

Mar 18 2024
  jbrowse2: added bonobo assembly NHGRI_mPanPan1_v2.0_pri
  jbrowse2: fixed aliases generation

Mar 08 2024
  jbrowse2: added rn8

Mar 04 2024
  carpe-variants: fixes of positions for deletions; processing in 10 simultaneous threads

Mar 01 2024
  carpe-variants: fixes of positions for non-snvs,
                  export variant type in column 3 of gff3 file

Feb 23 2024
  ensembl-prep: fixed code to handle scaffold-only assemblies
  ensembl: fixed output dir for tracks
  clinvar: added generation of pathogenic track
