@@ -346,7 +346,8 @@
                 <value>https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus_shrspbbbutx/Rattus_norvegicus_shrspbbbutx.UTH_Rnor_SHRSP_BbbUtx_1.0.115.gff3.gz</value>
                 <value>https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus_shrutx/Rattus_norvegicus_shrutx.UTH_Rnor_SHR_Utx.115.gff3.gz</value>
                 <value>https://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus_wkybbb/Rattus_norvegicus_wkybbb.UTH_Rnor_WKY_Bbb_1.0.115.gff3.gz</value>
-
+                <value>https://ftp.ensembl.org/pub/release-113/gff3/rattus_norvegicus/Rattus_norvegicus.mRatBN7.2.113.gff3.gz</value>
+                <value>https://ftp.ensembl.org/pub/release-104/gff3/rattus_norvegicus/Rattus_norvegicus.Rnor_6.0.104.chr.gff3.gz</value>
                 <value>https://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.115.gff3.gz</value>
                 <value>https://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm39.115.gff3.gz</value>
                 <value>https://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.115.gff3.gz</value>
@@ -371,6 +372,10 @@
                 <entry key="Rattus_norvegicus_shrspbbbutx.UTH_Rnor_SHRSP_BbbUtx_1.0.115-model.gff3.gz" value="Ensembl (UTH_Rnor_SHRSP_BbbUtx_1.0.115) Model.gff3.gz"/>
                 <entry key="Rattus_norvegicus_wkybbb.UTH_Rnor_WKY_Bbb_1.0.115-feature.gff3.gz" value="Ensembl (UTH_Rnor_WKY_Bbb_1.0.115) Features.gff3.gz"/>
                 <entry key="Rattus_norvegicus_wkybbb.UTH_Rnor_WKY_Bbb_1.0.115-model.gff3.gz" value="Ensembl (UTH_Rnor_WKY_Bbb_1.0.115) Model.gff3.gz"/>
+                <entry key="Rattus_norvegicus.mRatBN7.2.113-feature.gff3.gz" value="Ensembl (mRatBN7.2.113) Features.gff3.gz"/>
+                <entry key="Rattus_norvegicus.mRatBN7.2.113-model.gff3.gz" value="Ensembl (mRatBN7.2.113) Model.gff3.gz"/>
+                <entry key="Rattus_norvegicus.Rnor_6.0.104-feature.gff3.gz" value="Ensembl (Rnor_6.0.104) Features.gff3.gz"/>
+                <entry key="Rattus_norvegicus.Rnor_6.0.104-model.gff3.gz" value="Ensembl (Rnor_6.0.104) Model.gff3.gz"/>
 
                 <entry key="Mus_musculus.GRCm39.115-feature.gff3.gz" value="Ensembl (GRCm39.115) Features.gff3.gz"/>
                 <entry key="Mus_musculus.GRCm39.115-model.gff3.gz" value="Ensembl (GRCm39.115) Model.gff3.gz"/>
@@ -401,6 +406,10 @@
                 <entry key="Rattus_norvegicus_shrspbbbutx.UTH_Rnor_SHRSP_BbbUtx_1.0.115-model.gff3.gz" value="302"/>
                 <entry key="Rattus_norvegicus_wkybbb.UTH_Rnor_WKY_Bbb_1.0.115-feature.gff3.gz" value="303"/>
                 <entry key="Rattus_norvegicus_wkybbb.UTH_Rnor_WKY_Bbb_1.0.115-model.gff3.gz" value="303"/>
+                <entry key="Rattus_norvegicus.mRatBN7.2.113-feature.gff3.gz" value="372"/>
+                <entry key="Rattus_norvegicus.mRatBN7.2.113-model.gff3.gz" value="372"/>
+                <entry key="Rattus_norvegicus.Rnor_6.0.104-feature.gff3.gz" value="360"/>
+                <entry key="Rattus_norvegicus.Rnor_6.0.104-model.gff3.gz" value="360"/>
 
                 <entry key="Mus_musculus.GRCm39.115-feature.gff3.gz" value="239"/>
                 <entry key="Mus_musculus.GRCm39.115-model.gff3.gz" value="239"/>
